syntax = "proto3";

package User;


service UserService {
  rpc FindOne (UserId) returns (User) {}
  rpc FindAll (Empty) returns (UserList) {}
  rpc Hello (Empty) returns (message) {}
}

message UserId {
  string id = 1;
}

message User {
  string id = 1;
  string name = 2;
  string passwrord = 3;
  string email = 4;
}

message UserList {
  repeated User Users = 1;
} 

// đóng vai trò để debug
message message {
  string message = 1;
}

// emty message dùng để đóng vai trò như void type
message Empty {}
